--- a/views/visual.hbs
+++ b/views/visual.hbs
@@ -4,12 +4,12 @@
     <!--<script src="../public/javascripts/highcharts.js"></script>
     <script src="../public/javascripts/exporting.js"></script>
     <-->
-    
+    <style href="../public/stylesheets/style.css"></style>
 <head>
 
 <body>
-    <p>User: {{username}} </p>
-    <p>Details: {{details}}</p>
+    <p id="qwer">User : {{username}} </p>
+    <p id="tyuio">Details : {{details}}</p>
     
     <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto"></div>
     
